# discord-bot

./: .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  otel-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help.md  task.md
.github/workflows/: ci-cd-pipeline.yml  deploy.yml  lint-build-publish.yml
docs/: DeveloperGuide.md
scripts/: debug.sh  deploy.sh
src/bot/: main.py  web_server.py
src/bot/agents/: agent_manager.py  command_center_agent.py  instructions.py  support_agent.py
src/bot/button_loaders/: common.py  report_tickets.py  sponsor_tickets.py  support_tickets.py
src/bot/cogs/: admin.py  agents.py  alerts.py  auto_voice.py  cogs_manager.py  command_center.py  games.py  logging.py  report_tickets.py  smart_chat.py  sponsor_tickets.py  support_tickets.py
src/bot/config/: alerts.py  auto_voice.py  cogs_manager.py  command_center.py  common.py  database.py  games.py  logging.py  report_tickets.py  smart_chat.py  sponsor_tickets.py  support_tickets.py
src/bot/core/: admin.py  alerts.py  auto_voice.py  command_center.py  common.py  games.py  logging.py  report_tickets.py  smart_chat.py  sponsor_tickets.py  support_tickets.py
src/bot/llm/: base.py  gemini.py
src/bot/models/: bot_button.py  prompt.py  sponsor_tier.py
src/bot/prompt_loaders/: mcp.py
src/bot/services/: discord_svc.py  role_checker_svc.py  user_info_svc.py
(+35 files in other folders)
