[project]
name = "rcb-discord-bot"
version = "0.1.0"
description = "A Discord bot with modular features."
authors = [{ name = "tjtanjin", email = "cjtanjin@gmail.com" }]
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[tool.hatch.envs.default.scripts]
lint = "darglint ./src/bot && ruff check --fix ./src/bot && black --check ./src/bot"
format = "ruff check --fix ./src/bot && black ./src/bot"
start = "docker compose up -d --build"

[tool.hatch.envs.dev]
dependencies = ["pre-commit"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["build", "dist", ".venv"]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "D", "I"]
ignore = ["D200", "D203", "D205", "D212"]
fixable = ["ALL"]

[tool.darglint]
docstring_style = "google"
strictness = "long"

[tool.black]
line-length = 120
target-version = ['py311']